Introduced compatibility for JDK 8 and added a README.